--- a/SmartPos/App.xaml
+++ b/SmartPos/App.xaml
@@ -2,8 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SmartPos"
-             StartupUri="MainWindow.xaml">
+             xmlns:views="clr-namespace:SmartPos.Views"
+             xmlns:viewModels="clr-namespace:SmartPos.ViewModels">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <DataTemplate DataType="{x:Type viewModels:InventarioViewModel}">
+                <views:InventarioView />
+            </DataTemplate>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
