--- a/SmartPos/Views/LoginView.xaml
+++ b/SmartPos/Views/LoginView.xaml
@@ -1,12 +1,55 @@
-﻿<Window x:Class="SmartPos.Views.LoginView"
+﻿<mah:MetroWindow x:Class="SmartPos.Views.LoginView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SmartPos.Views"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="LoginView" Height="450" Width="800">
+        Title="SmartPost - Iniciar Sesión" 
+        Height="450" Width="400" 
+        WindowStartupLocation="CenterScreen"
+        GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
+        ResizeMode="NoResize">
     <Grid>
-        
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
+            <TextBlock Text="SMART POST" 
+               FontSize="32" 
+               FontWeight="Bold" 
+               HorizontalAlignment="Center" 
+               Margin="0,0,0,20"
+               Foreground="{DynamicResource MahApps.Brushes.Accent}"/>
+
+            <TextBlock Text="Gestión de Inventario y Ventas" 
+               HorizontalAlignment="Center" 
+               Margin="0,0,0,30" 
+               Foreground="Gray"/>
+
+            <TextBox mah:TextBoxHelper.Watermark="Nombre de Usuario"
+             mah:TextBoxHelper.ClearTextButton="True"
+             mah:TextBoxHelper.UseFloatingWatermark="True"
+             Margin="0,10"
+             FontSize="16"
+             x:Name="txtUsuario"/>
+
+            <PasswordBox mah:TextBoxHelper.Watermark="Contraseña"
+                 mah:TextBoxHelper.UseFloatingWatermark="True"
+                 mah:TextBoxHelper.ClearTextButton="False"
+                 Margin="0,10"
+                 FontSize="16"
+                 x:Name="txtPassword"/>
+
+            <Button Content="INICIAR SESIÓN" 
+            Style="{StaticResource MahApps.Styles.Button.Flat}"
+            Background="{DynamicResource MahApps.Brushes.Accent}"
+            Foreground="White"
+            Height="45"
+            Margin="0,20,0,10"
+            Click="BtnLogin_Click"/>
+
+            <TextBlock Text="v1.0.0" HorizontalAlignment="Right" Foreground="Silver" FontSize="10"/>
+        </StackPanel>
+
     </Grid>
-</Window>
+</mah:MetroWindow>
+
