--- a/SmartPos/Views/LoginView.xaml
+++ b/SmartPos/Views/LoginView.xaml
@@ -6,14 +6,14 @@
         xmlns:local="clr-namespace:SmartPos.Views"
         xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
-        Title="SmartPost - Iniciar Sesión" 
+        Title="SmartPos - Iniciar Sesión" 
         Height="450" Width="400" 
         WindowStartupLocation="CenterScreen"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         ResizeMode="NoResize">
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Width="300">
-            <TextBlock Text="SMART POST" 
+            <TextBlock Text="SMART POS" 
                FontSize="32" 
                FontWeight="Bold" 
                HorizontalAlignment="Center" 
@@ -26,22 +26,24 @@
                Foreground="Gray"/>
 
             <TextBox mah:TextBoxHelper.Watermark="Nombre de Usuario"
-             mah:TextBoxHelper.ClearTextButton="True"
-             mah:TextBoxHelper.UseFloatingWatermark="True"
-             Margin="0,10"
-             FontSize="16"
-             x:Name="txtUsuario"/>
-
+                 mah:TextBoxHelper.ClearTextButton="True"
+                 mah:TextBoxHelper.UseFloatingWatermark="True"
+                 Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="0,10"
+                 FontSize="16"
+                 x:Name="txtUsuario"/>
             <PasswordBox mah:TextBoxHelper.Watermark="Contraseña"
                  mah:TextBoxHelper.UseFloatingWatermark="True"
                  mah:TextBoxHelper.ClearTextButton="False"
+                 
                  Margin="0,10"
                  FontSize="16"
                  x:Name="txtPassword"/>
 
-            <Button Content="INICIAR SESIÓN" 
+            <Button Content="Iniciar Sesión" 
                 Style="{StaticResource MahApps.Styles.Button.Flat}"
                 Background="{DynamicResource MahApps.Brushes.Accent}"
+                Command="{Binding LoginCommand}"
                 Foreground="White"
                 Height="45"
                 Margin="0,20,0,10"
