Agregando codigo para obtener el password del control PasswordBox

--- a/SmartPos/Views/LoginView.xaml
+++ b/SmartPos/Views/LoginView.xaml
@@ -44,6 +44,8 @@
                 Style="{StaticResource MahApps.Styles.Button.Flat}"
                 Background="{DynamicResource MahApps.Brushes.Accent}"
                 Command="{Binding LoginCommand}"
+                CommandParameter="{Binding ElementName=txtPassword}"
+                IsDefault="True"
                 Foreground="White"
                 Height="45"
                 Margin="0,20,0,10"
