Agregando clase para utilizadaes

--- a/SmartPos/Views/LoginView.xaml
+++ b/SmartPos/Views/LoginView.xaml
@@ -9,6 +9,7 @@
         Title="SmartPos - Iniciar Sesión" 
         Height="450" Width="400" 
         WindowStartupLocation="CenterScreen"
+        WindowState="Maximized"
         GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
         ResizeMode="NoResize">
     <Grid>
