--- a/SmartPos/Views/KardexView.xaml
+++ b/SmartPos/Views/KardexView.xaml
@@ -22,6 +22,13 @@
             <TextBlock x:Name="TxtNombreArticulo" Text="Nombre del Producto" FontSize="16" Margin="10,0,20,0"/>
             <TextBlock Text="Stock Actual:" FontWeight="Bold" FontSize="16"/>
             <TextBlock x:Name="TxtStockActual" Text="0.00" FontSize="16" Margin="10,0,0,0"/>
+
+            <Button Click="BtnExportar_Click" Content="📊 Exportar Excel"
+                    ToolTip="Exportar a Excel"
+                    Style="{StaticResource MahApps.Styles.Button.Flat}"
+                    Foreground="MediumSeaGreen">
+                
+            </Button>
         </StackPanel>
 
         <DataGrid Grid.Row="1" x:Name="DgKardex" 
