--- a/SmartPos/Views/Seguridad/SeguridadView.xaml
+++ b/SmartPos/Views/Seguridad/SeguridadView.xaml
@@ -35,6 +35,24 @@
                         <DataGrid Grid.Row="1" AutoGenerateColumns="False" IsReadOnly="True"
                           ItemsSource="{Binding Usuarios}">
                             <DataGrid.Columns>
+                                <DataGridTemplateColumn Header="Acciones" Width="80">
+                                    <DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Button Command="{Binding DataContext.EditarUsuarioCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}"
+                                        Style="{StaticResource MahApps.Styles.Button.Flat}"
+                                        Padding="0" Height="25" Width="25"
+                                        ToolTip="Editar Artículo">
+                                                <TextBlock Text="&#xE70F;" 
+                                               FontFamily="Segoe MDL2 Assets" 
+                                               FontSize="14" 
+                                               Foreground="{DynamicResource MahApps.Brushes.Accent}"
+                                               HorizontalAlignment="Center" 
+                                               VerticalAlignment="Center"/>
+                                            </Button>
+                                        </DataTemplate>
+                                    </DataGridTemplateColumn.CellTemplate>
+                                </DataGridTemplateColumn>
                                 <DataGridTextColumn Header="Usuario Id" Binding="{Binding UsuarioId}" Width="120"/>
                                 <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}" Width="*"/>
                                 <DataGridTextColumn Header="Rol" Binding="{Binding RolId}" Width="150"/>
