--- a/SmartPos/Views/Seguridad/SeguridadView.xaml
+++ b/SmartPos/Views/Seguridad/SeguridadView.xaml
@@ -18,6 +18,7 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
+                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
                         <DockPanel Grid.Row="0" Margin="0,10">
@@ -67,6 +68,22 @@
                                 </DataGridTemplateColumn>
                             </DataGrid.Columns>
                         </DataGrid>
+
+                        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,15,0,0">
+                            <TextBlock Text="Registros por página: " VerticalAlignment="Center" Margin="0,0,5,0"/>
+                            <ComboBox SelectedValue="{Binding SelectedPageSize}" 
+                          ItemsSource="{Binding TamañosPagina}" 
+                          SelectedItem="{Binding RegistrosPorPagina}" 
+                          Margin="0,0,20,0"/>
+                            <Button Command="{Binding AnteriorPaginaCommand}" Content="◀" Style="{StaticResource MahApps.Styles.Button.Flat}"/>
+                            <TextBlock VerticalAlignment="Center" Margin="10,0">
+                    <Run Text="Página "/>
+                    <Run Text="{Binding PaginaActual}" FontWeight="Bold"/>
+                    <Run Text=" de "/>
+                    <Run Text="{Binding TotalPaginas}" FontWeight="Bold"/>
+                            </TextBlock>
+                            <Button Command="{Binding SiguientePaginaCommand}" Content="▶" Style="{StaticResource MahApps.Styles.Button.Flat}"/>
+                        </StackPanel>
                     </Grid>
                 </TabItem>
 
@@ -147,7 +164,7 @@
 
                     <TextBox mah:TextBoxHelper.Watermark="Usuario ID" 
                                  Text="{Binding UsuarioSeleccionado.UsuarioId}" 
-                                 IsEnabled="{Binding EsNuevoUsuario}" 
+                                 IsEnabled="{Binding IsNuevoUsuario}" 
                                  Margin="0,0,0,10"/>
 
                     <TextBox mah:TextBoxHelper.Watermark="Nombre" 
