--- a/SmartPos/Views/Factura/FacturacionView.xaml
+++ b/SmartPos/Views/Factura/FacturacionView.xaml
@@ -26,14 +26,13 @@
 
 
                     <TextBox x:Name="TxtBusqueda" 
-         Text="{Binding BusquedaArticulo, UpdateSourceTrigger=PropertyChanged}"
-         mah:TextBoxHelper.Watermark="Escanee o escriba el código..."
-         FontSize="20" 
-         FontWeight="SemiBold"
-         mah:TextBoxHelper.SelectAllOnFocus="True"
-         
-         Style="{StaticResource MahApps.Styles.TextBox.Button}"
-         >
+                        Text="{Binding BusquedaArticulo, UpdateSourceTrigger=PropertyChanged}"
+                        mah:TextBoxHelper.Watermark="Escanee o escriba el código..."
+                        FontSize="20" 
+                        FontWeight="SemiBold"
+                        mah:TextBoxHelper.SelectAllOnFocus="True"
+                        Style="{StaticResource MahApps.Styles.TextBox.Button}"
+                    >
 
                         <mah:TextBoxHelper.ButtonContent>
                             <Button Command="{Binding AbrirBuscadorArticulosCommand}"
@@ -56,9 +55,12 @@
 
                 <StackPanel Grid.Column="1" Margin="15,0,0,0">
                     <TextBlock Text="VENDEDOR" FontWeight="Bold" FontSize="11" Foreground="#495057" Margin="2,0,0,5"/>
-                    <ComboBox Height="40" mah:TextBoxHelper.Watermark="Seleccione vendedor"
-                              ItemsSource="{Binding Vendedores}" 
-                              SelectedItem="{Binding VendedorSeleccionado}"/>
+                    <ComboBox ItemsSource="{Binding Vendedores}"
+              SelectedItem="{Binding VendedorSeleccionado}"
+              DisplayMemberPath="NombreCompleto" 
+              mah:TextBoxHelper.Watermark="Seleccione Vendedor..."
+              FontSize="16" Width="250">
+                    </ComboBox>
                 </StackPanel>
             </Grid>
         </Border>
